refactor: Clean the code